--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,20 @@
-:root {
+/* :root {
   --mainBlue: #2a2a72;
   --lightBlue: #009ffd;
   --mainWhite: #f3f3f3;
   --mainDark: #232528;
   --mainYellow: #ffa400;
-}
+} */
 
 body {
   font-family: 'Raleway', sans-serif !important; 
-  background: var(--mainWhite) !important;
-  color: var(--mainDark) !important;
+  /* background: var(--mainWhite) !important;
+  color: var(--mainDark) !important; */
 }
 
+
+
+/* 
 .text-title {
   font-family: 'Raleway', sans-serif !important; 
   letter-spacing: 0.3rem;
@@ -44,4 +47,4 @@ body {
   cursor: pointer;
   font-size: 1.2rem;
   color: var(--mainYellow);
-}
+} */
