get product to appear on screen

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -15,7 +15,7 @@ nav{
 
 }
 
-button{
+.cartbutton{
     
         box-shadow:inset 0px 1px 0px 0px #ffffff;
         background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
@@ -32,11 +32,16 @@ button{
         text-decoration:none;
         text-shadow:0px 1px 0px #ffffff;
     }
-    button:hover {
+    .cartbutton:hover {
         background:linear-gradient(to bottom, #f6f6f6 5%, red 100%);
         background-color:#f6f6f6;
     }
-    button:active {
+    .cartbutton:active {
         position:relative;
         top:3px;
+    }
+
+
+    img {
+        padding:1%;
     }
