--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -43,5 +43,114 @@ nav{
 
 
     img {
+        
         padding:1%;
+    }
+
+    .titlecard{
+        font-weight: bold;
+        /* font-size: 0.6em; */
+        text-align: center !important;
+    }
+
+    h5{
+        text-align: center !important;
+
+
+    }
+
+
+    .price{
+        font-weight: bold;
+    }
+
+    .card{
+        border-color:transparent;
+        transition: all 1s linear;
+    }
+    .card:hover{
+        border: 0.1rem solid red;
+        box-shadow: 2px 2px 5px 0p red;
+
+    }
+
+
+    .card-footer{
+        background: transparent;
+        border-top: transparent;
+        transition: all 1s linear;
+
+    }
+
+    .card-footer:hover{
+        background: orange;
+    }
+
+
+
+
+    .img-container {
+        position: relative;
+        overflow: hidden;
+      }
+      .card-img-top {
+        transition: all 1s linear;
+      }
+      .img-container:hover .card-img-top{
+        transform: scale(1.2);
+      }
+
+
+      .button {
+        background-color: #000000;
+        color: #FFFFFF;
+        padding: 10px;
+        border-radius: 10px;
+        -moz-border-radius: 10px;
+        -webkit-border-radius: 10px;
+        margin:10px;
+        position: absolute;
+        bottom: 0;
+        left: 100;
+       
+    }
+    
+    .small-btn {
+        width: 50px;
+        height: 25px;
+    }
+
+
+
+ 
+     .cart-btn{
+
+        position: absolute;
+        bottom: 0;
+        right: 0;
+         padding: 0.2 rem 0.4rem;
+         background-color: lightskyblue;
+         border: 1px solid black;
+         border-radius: 0.5rem 0 0 0;
+         transform: translate(100%, 100%);
+        transition: all 1s linear;
+      } 
+      .img-container:hover .cart-btn {
+        transform: translate(0,0);
+      }
+      .cart-btn:hover{
+        color: var(--mainBlue);
+        cursor: pointer;
+      }
+
+
+
+
+
+    body{
+        background-color: rgb(238, 237, 231);
+    }
+
+    .bblock{
+        background-color: white !important;
     }
