--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -156,17 +156,52 @@ nav{
     }
 
     .modalStyle{
-        margin-top: 10%;
+        margin-top: 2%;
+
         margin-bottom: 10%;
         border: 2px solid black;
 
         position:fixed;
         top:0;
-        left:0;
-        right:0;
+        left:10%;
+        right:10%;
         bottom:0;
         background: white;
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+
+    #modal{
+        font-size: 20%;
+
+    }
+
+
+
+    .btn-black{
+        background:transparent;
+        text-transform: capitalize;
+        font-size:0.8rem !important;
+        color: black;
+        border-radius: 0 !important;
+        border: 2px solid black;
+    }
+
+
+    .up-down:hover {
+        background:linear-gradient(to bottom, #f6f6f6 5%, red 100%);
+        background-color:#f6f6f6;
+        cursor: pointer;
+    }
+    .up-down:active {
+        position:relative;
+        top:3px;
+    }
+
+
+
+    .cart-icon{
+        cursor: pointer;
+        font-size: 1.2rem;
     }
