--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -42,6 +42,44 @@ nav{
     }
 
 
+    .shopButton{
+    
+        box-shadow:inset 0px 1px 0px 0px #ffffff;
+        background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+        background-color:#ffffff;
+        border-radius:6px;
+        border:1px solid black;
+        display:inline-block;
+        cursor:pointer;
+        color: black;
+        font-family:Arial;
+        font-size:12px;
+        font-weight:bold;
+        padding:6px 24px;
+        text-decoration:none;
+        text-shadow:0px 1px 0px #ffffff;
+    }
+    .shopButton:hover {
+        background:linear-gradient(to bottom, #f6f6f6 5%, red 100%);
+        background-color:#f6f6f6;
+    }
+    .shopButton:active {
+        position:relative;
+        top:3px;
+    }
+
+
+
+    
+    
+
+
+
+
+
+
+
+
     img {
         
         padding:1%;
@@ -148,7 +186,7 @@ nav{
 
 
     body{
-        background-color: rgb(238, 237, 231);
+        background-color: whitesmoke;
     }
 
     .bblock{
